# onboarding

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
k8s/: fastapi-deployment.yaml  mysql-deployment.yaml
src/: database.py  main.py
src/cars/: models.py  router.py  schemas.py  service.py
